// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should summarize multiple expenses 1`] = `
<div>
  Viewing 
  3 expenses
   totalling 
  $1,141.95
</div>
`;

exports[`should summarize single expense 1`] = `
<div>
  Viewing 
  1 expense
   totalling 
  $1.95
</div>
`;
